texi2html/test/invalid/res/math_not_closed/math_not_closed_l2h_images.pl
# LaTeX2HTML 2002-2-1 (1.71)
# Associate images original text with physical files.


$key = q/3delta+2@bye;MSF=1.5;AAT/;
$cached_env_img{$key} = q|<IMG
 WIDTH="77" HEIGHT="28" ALIGN="MIDDLE" BORDER="0"
 SRC="|."$dir".q|math_not_closed_l2h_img2.png"
 ALT="$3\delta + 2
@bye
$">|; 

$key = q/delta+2;MSF=1.5;AAT/;
$cached_env_img{$key} = q|<IMG
 WIDTH="37" HEIGHT="28" ALIGN="MIDDLE" BORDER="0"
 SRC="|."$dir".q|math_not_closed_l2h_img1.png"
 ALT="$\delta + 2
$">|; 

1;

